# PhysicsEngine

./: .gitignore  CMakeLists.txt  Main.cpp  Readme.md
Classes/: Vector2.cpp
GUI/Classes/: Renderer.cpp
GUI/Headers/: Renderer.h  RendererParm.h
Headers/: Vector2.h
Math/Classes/: Vector2.cpp
Math/Headers/: Vector2.h
Object/Classes/: Circle.cpp  Object.cpp
Object/Headers/: Circle.h  Object.h  Shape2.h
Physics/Classes/: CollisionDetector.cpp
Physics/Headers/: CollisionDetector.h
